<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PervasiveMobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ui_label_serverURL">Server URL</string>
    <string name="ui_et_serverURL_default">10.10.10.125:8080</string>
    <string name="ui_et_requestMethod_default"></string>
    <string name="ui_label_response_default1">Server current temp</string>
    <string name="ui_label_response_temp">Current temp</string>
    <string name="ui_label_response_default2">Server current ambient</string>
    <string name="ui_label_response_ambient">Current ambient</string>    
    <string name="ui_label_response_blind">Server current blind</string>
    <string name="ui_btn_sendRequest">Send Request</string>
    <string name="ui_btn_getRules">Get Rules</string>
	<string name="ui_btn_viewRules">View Rules</string>
  	<string name="ui_label_listRules">List of Rules</string>
  	<string name="ui_label_tempDiff">Temperature Difference</string>
  	<string name="ui_temperature_diff">2</string>
  	<string name="ui_listView_allRulesList">List of Rules</string>
	<string name="ui_label_ifTemp">If Temperature IS </string>
	<string name="ui_label_ambient"> Ambient Is </string>
	<string name="ui_label_thenblind"> Then Blind Is </string>
	<string name="ui_btn_modify"> Modify </string>
	<string name="ui_btn_back"> Back </string>
	<string name="ui_btn_addButton"> Add </string>  	
	<string name="ui_btn_saveAll"> Save </string>
	<string name="ui_btn_changeTempDiff"> Change Temp Difference </string>
	
	<string-array name="temp_values">
	    <item> NA </item>
	    <item> hot </item>
	    <item> warm </item>
	    <item> cold </item>
	    <item> comfort </item>
	    <item> freezing </item>
	</string-array>
	<string-array name="ambi_values">
	    <item> NA </item>
	    <item> bright </item>
	    <item> dim </item>
	    <item> dark </item>
	</string-array>
	<string-array name="relation_values">
	    <item> NA </item>
	    <item> AND </item>
	    <item> OR </item>
	</string-array>
	<string-array name="blind_values">	    
	    <item> Close </item>
	    <item> Open </item>
	    <item> Half </item>
	</string-array>
	
</resources>
