<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rit.csci759.mobile.MainActivity" >
     
     <LinearLayout android:id="@+id/LinearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >

         <EditText
             android:id="@+id/et_serverURL"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textUri"
             android:text="@string/ui_et_serverURL_default" 
             
             >
         </EditText>

          <Button
              android:id="@+id/btn_sendRequest"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:text="@string/ui_btn_sendRequest" />
              
           

          <Button
              android:id="@+id/btn_getRules"
              android:layout_width="88dp"
              android:layout_height="wrap_content"
              android:text="@string/ui_btn_getRules" />

     </LinearLayout>
   
     <LinearLayout android:id="@+id/LinearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         
     	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_label_response_temp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/ui_label_response_default1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
    
     <LinearLayout android:id="@+id/LinearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         
     	<TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_label_response_ambient"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<TextView
        android:id="@+id/ambi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/ui_label_response_default2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
     
     <EditText
             android:id="@+id/temperature_diff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            
             android:inputType="textUri"
             android:text="@string/ui_temperature_diff" >
         </EditText>
         
     <Button
              android:id="@+id/btn_changeTempDiff"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ui_btn_changeTempDiff" />
     
    <ListView
        android:id="@+id/main_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.38" >
</ListView>
    
</LinearLayout>
