<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <Button
        android:id="@+id/btn_viewRules"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2pt"
        android:text="@string/ui_btn_viewRules" />
    
    <Button
        android:id="@+id/btn_addButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2pt"
        android:text="@string/ui_btn_addButton" />
    
    <Button
        android:id="@+id/btn_saveAll"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2pt"
        android:text="@string/ui_btn_saveAll" />
    
     <TextView
        android:id="@+id/allRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_label_listRules"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <ListView
        android:id="@+id/listView_allRulesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.38" >
	</ListView>
	
     
     
     
</LinearLayout>
