<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_ifTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_label_ifTemp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_temp"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner_relation"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/label_ambient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_label_ambient"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_ambi"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/label_thenblind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_label_thenblind"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_blind"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_modify"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ui_btn_modify" />


</LinearLayout>